# jimtclpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  extensions.cmake
.github/workflows/: jimtclpp_workflow.yml
binary_ext/: jim-aio-ext-sockets.cpp  jim-aio-ext-ssl.cpp  jim-aio-ext.cpp  jim-array-ext.cpp  jim-chrono-ext.cpp  jim-clock-ext.cpp  jim-cpp-ext.cpp  jim-eventloop-ext.cpp  jim-example-ext.cpp  jim-exec-boost-ext.cpp  jim-exec-ext.cpp  jim-file-ext-adv2.cpp  jim-file-ext.cpp  jim-history-ext.cpp  jim-interp-ext.cpp  jim-load-ext.cpp  jim-namespace-ext.cpp  jim-pack-ext.cpp  jim-package-ext.cpp  jim-posix-ext.cpp  jim-readdir-ext.cpp  jim-signal-ext.cpp  jim-syslog-ext.cpp  jim-tclprefix-ext.cpp
core/: _load-static-exts.cpp  _load-static-noexts.cpp  _unicode_mapping.h  jim-capi.cpp  jim-format.cpp  jim-hashtable.cpp  jim-interactive.cpp  jim-subcmd.cpp  jim.cpp  prj_log.cpp  prj_trace.cpp  utf8.cpp
docs/: jimsh_externs.txt
inc/: example_os_compiler_1.h  jim-aio-ext.h  jim-alloc.h  jim-api.h  jim-base.h  jim-capi.h  jim-config.h  jim-cpp-api.h  jim-cppapi.h  jim-eventloop.h  jim-forwards.h  jim-hashtable.h  jim-inc.h  jim-signal.h  jim-subcmd.h  jim-win32compat.h  jim.h  jim_all_exts.h  jim_max_exts.h  jim_min_exts.h  jim_norm_features.h  jimautoconf.h  jimiocompat.h  linux_gcc_1.h  macos_gcc_1.h  prj_compat.h  readdir.h  returns.h  utf8.h  win_mingw64_1.h  win_msvc_1.h
jimsh/: jimsh.cpp  jimshmin.cpp
portabilty/: jim-posix.cpp  jim-signal.cpp  jim-tty.cpp  jimiocompat.cpp  prj_compat.cpp  prj_printf.cpp  readdir.cpp
priv_inc/: jim-aio-ext.h  jim-cpp-api.h  jim-eventloop.h  jim-signal.h  jimregexp.h  prj_compat.h  prj_log.h  prj_printf.h  prj_trace.h  swbreakpoint.h  utf8.h
regexp/: jim-regexp-ext.cpp  jimregexp.cpp
script_ext/: _binary-sext.cpp  _glob-sext.cpp  _initjimsh-sext.cpp  _nshelper-sext.cpp  _oo-sext.cpp  _stdlib-sext.cpp  _tclcompat-sext.cpp  _tree-sext.cpp
scripts/: build.sh  checkSize.tcl  check_abi.sh  dump_abi.sh  runtests_cmakeOutput.sh  runtests_vcIDEoutput.bat  valgrind.sh
swig/: README.txt  gen.sh  jimtclpp.i
swig/csharp/: jimtclpp.cs  jimtclppPINVOKE.cs  jimtclpp_wrap.c
swig/java/: jimtclpp.java  jimtclppJNI.java  jimtclpp_wrap.c
swig/python/: jimtclpp.py  jimtclpp_wrap.c
swig/tcl/: jimtclpp_wrap.c
tests/: @  Makefile  runall.tcl  string.test  tailcall.test  tcltest.tcl
vc/: TODO.txt  jimtclpp.sln  runtest.bat
vc/adv_api_ex1/: adv_api_ex1.cpp  adv_api_ex1.vcxproj  adv_api_ex1.vcxproj.filters  build.sh  jim-file-adv.cpp  prj_wrap.cpp  prj_wrap.h
vc/jimshpp/: Source.cpp  jimshpp.vcxproj  jimshpp.vcxproj.filters  test.cpp
vc/jimshppdll/: jimshppdll.vcxproj  jimshppdll.vcxproj.filters
vc/jimtclpp/: jimtclpp.vcxproj  jimtclpp.vcxproj.filters
vc/prj_compat/: prj_compat.vcxproj  prj_compat.vcxproj.filters  prj_compat_main.cpp
vc/winjimshpp/: winjimshpp.vcxproj  winjimshpp.vcxproj.filters
versions/: jim-file-ext-adv2-version.h  jim-interp-version.h  jim-nshelper-version.h  jim-regexp-version.h
